Added more api tests, talk directly to DB
