# src/handlers/get_meals.go
@@ -16,19 +16,44 @@ func NewGetMealHandler(a app.App) func(params meals.GetMealsParams) middleware.R
 
 	return func(params meals.GetMealsParams) middleware.Responder {
 		d := params.Date
-		mmeals, _ := app.MealSvc.FindMeals(time.Time(*d), context.TODO())
+		fwd := 0
+
+		limit := 1000
+		added := 0
+
+		if params.Limit != nil {
+			limit = int(*params.Limit)
+		}
+
+		if params.Daysforward != nil {
+			fwd = int(*params.Daysforward)
+		}
 
 		var payload []*models.Meal
-		for _, mm := range mmeals {
+		for i := 0; i <= fwd; i++ {
+			mmeals, _ := app.MealSvc.FindMeals(time.Time(*d).AddDate(0, 0, i), context.TODO())
 
-			payload = append(payload, &models.Meal{
-				MealID:     int64(mm.Id),
-				MealType:   mm.MealType.String(),
-				MealAuthor: mm.Author.Firstname,
-				MealDate:   strfmt.Date(mm.MealDate),
-				MealName:   mm.MealName,
-				Kcalories:  int64(mm.KCalories),
-			})
+			for _, mm := range mmeals {
+				cids := []int64{}
+
+				for _, mmc := range mm.Consumers {
+					cids = append(cids, int64(mmc.ID))
+				}
+
+				payload = append(payload, &models.Meal{
+					MealID:       int64(mm.Id),
+					MealType:     mm.MealType.String(),
+					MealAuthorID: int64(mm.Author.ID),
+					MealDate:     strfmt.Date(mm.MealDate),
+					MealName:     mm.MealName,
+					Kcalories:    int64(mm.KCalories),
+					ConsumerIds:  cids},
+				)
+				added = added + 1
+				if added >= limit {
+					return meals.NewGetMealsOK().WithPayload(payload)
+				}
+			}
 		}
 
 		return meals.NewGetMealsOK().WithPayload(payload)
